# evrone_fastapi

./: .gitignore  .pylintrc  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
evrone_fastapi/: main.py  settings.py
tests/: test_status.py
